# TurboDownload

./: .gitignore  AGENTS.md  ART_VALIDATION_READINESS_REPORT.md  CRAWLER_DEEP_ANALYSIS.md  CROSS_COMPILE_SETUP.md  Cargo.toml  GITHUB_ACTIONS_VERIFICATION_REPORT.md  HEARTBEAT.md  LINUX_BUILD_REPORT.md  LINUX_BUILD_REPORT_CORRECT_PATH.md  MEMORY.md  P3_COMPLETE.md  P4_PLAN.md  P5_PLAN.md  P6_ARCHITECTURE.md  PROGRESS_2026-03-31.md  PROJECT_REPORT.md  PROJECT_STATE.md  README.md  RELEASE_NOTES.md  T4.1_UPDATE_TEST_REPORT.md  T6.2.2_WINDOWS_BUILD_FINAL_REPORT.md  T6.2.2_WINDOWS_BUILD_REPORT.md  T6.2.3_LINUX_BUILD_FINAL_REPORT_CORRECT_PATH.md  T6.3_MACOS_BUILD_REPORT.md  TESTING_RADAR_REPORT.md  UI_STYLE_UNIFORMITY_REPORT.md  WINDOWS_BUILD_REPORT.md  WORKFLOW.md  docker-build.sh  index.html  latest.json  p2_verification_dev.md  p2_verification_lead.md  p5_verification_architect.md  p5_verification_dev.md  p5_verification_lead.md  package.json  test_radars.html  vite.config.ts
.github/workflows/: build.yml  linux-build.yml  release.yml  windows-build.yml
agent-visual-app/: 流程规范.md
crates/turbo-crawler/: Cargo.toml
crates/turbo-crawler/examples/: radar_test.rs
crates/turbo-crawler/src/: lib.rs
crates/turbo-crawler/src/adapters/: bilibili.rs  generic.rs  mod.rs  youtube.rs
crates/turbo-crawler/src/classifier/: mod.rs
crates/turbo-crawler/src/crawler/: mod.rs
crates/turbo-crawler/src/error/: mod.rs
crates/turbo-crawler/src/extractor/: mod.rs
crates/turbo-crawler/src/http/: mod.rs
crates/turbo-crawler/src/parser/: mod.rs
crates/turbo-crawler/src/scheduler/: mod.rs
crates/turbo-downloader/: Cargo.toml  README.md
crates/turbo-downloader/benches/: download_bench.rs
crates/turbo-downloader/examples/: basic.rs  resume.rs  with_progress.rs
crates/turbo-downloader/src/: commands.rs  downloader.rs  lib.rs
crates/turbo-downloader/src/chunk/: manager.rs  mod.rs  strategy.rs  worker.rs
crates/turbo-downloader/src/download/: manager.rs  mod.rs  scheduler.rs  task.rs
crates/turbo-downloader/src/error/: mod.rs  types.rs
crates/turbo-downloader/src/event/: emitter.rs  mod.rs  types.rs
crates/turbo-downloader/src/http/: client.rs  mod.rs  response.rs
crates/turbo-downloader/src/pool/: mod.rs  worker_pool.rs
crates/turbo-downloader/src/privacy/: config.rs  logging.rs  mod.rs  tls.rs
crates/turbo-downloader/src/progress/: mod.rs  speed.rs  tracker.rs
crates/turbo-downloader/src/range/: client.rs  mod.rs  support.rs
crates/turbo-downloader/src/resume/: mod.rs  recovery.rs  state.rs
crates/turbo-downloader/src/storage/: merger.rs  mod.rs  state.rs  writer.rs
crates/turbo-downloader/tests/: integration_test.rs  privacy_test.rs  smoke_test.rs
crates/turbo-downloader/tests/common/: mod.rs
crates/turbo-ui/: package.json  tailwind.config.js  vite.config.ts
design/p1/: ARCHITECTURE.md  DATA_MODEL.md  INTERFACE_DESIGN.md  TECH_DECISIONS.md
design/p2/: ARCHITECTURE.md
docs/: 01-ecosystem-research.md  API.md  API_CONTRACTS.md  DELIVERY_CHECKLIST.md  DEPENDENCY_GRAPH.md  FINAL_VERIFICATION.md  PROJECT_GROUP_OVERVIEW.md  PROJECT_STRUCTURE.md  TASK_BREAKDOWN.md  WORKFLOW.md
docs/p1-turbo-downloader/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/p2-turbo-crawler/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/p3-turbo-ui/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/p4-turbo-manager/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/p5-turbo-integration/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/p6-turbo-app/: CODE_TEMPLATES.md  DEV_CHECKLIST.md  PROJECT_START.md  TASK_CHAIN.md
docs/test_reports/: T1.2_icon_display_test.md
memory/: 2026-03-28.md
planning/: p5_p6_TASK_CHAIN.md
planning/p1/: DETAILED_TASK_CHAIN.md
planning/p2/: DETAILED_TASK_CHAIN.md
planning/p3/: ARCHITECTURE.md  DETAILED_TASK_CHAIN.md  TASK_VERIFICATION.md  VERIFICATION_REPORT_DEVELOPER.md  VERIFICATION_REPORT_LEAD.md  VERIFICATION_REPORT_PM.md  VERIFICATION_REPORT_PM_FINAL.md  WORKFLOW_PROCESS_RECORD.md
projects/TurboDownload/: PROJECT_STATE.md  T6.2.3_LINUX_BUILD_FINAL_REPORT.md  package.json  vite.config.js
scripts/: auto_save_state.sh  auto_session_recovery.py  enforce_workflow_check.sh  session_recovery.sh  test_api.sh  test_api_integration.sh  verify_privacy.sh
skills/project-workflow/: PROBLEM_RESOLUTION.md  SKILL.md
src/: App.tsx  index.css  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json  update.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tls_commands.rs
src-tauri/src/api/: auth.rs  download_monitor.rs  mod.rs  server.rs  token.rs  websocket.rs
src-tauri/src/api/routes/: download.rs
src-tauri/src/cli/: api_client.rs  mod.rs
src-tauri/src/commands/: auth.rs  crawler.rs  download.rs  file.rs  mod.rs  privacy.rs  tls.rs  update.rs
src-tauri/src/models/: download.rs  mod.rs
src-tauri/src/privacy/: config.rs  mod.rs  tls.rs  user_agent.rs
src-tauri/src/services/: download_manager.rs  http_downloader.rs  mod.rs
src-tauri/src/services/crawler/: html_parser.rs  mod.rs  url_extractor.rs
src-tauri/tests/: api_test.rs
src/api/: tauri.ts
src/components/: DownloadList.tsx  Layout.tsx
src/hooks/: useTauri.ts  useUpdater.ts
src/pages/: Dashboard.tsx  Download.tsx  PrivacySettings.tsx  Radar.tsx  Settings.tsx
src/router/: index.tsx
src/services/: crawler.ts  file.ts
src/stores/: downloadStore.ts
src/types/: index.ts
tests/: README.md  T4.2_privacy_test_report.md  api_integration_test.rs  api_integration_test_report.md  e2e_test.rs  e2e_test_report.md  test_utils.rs
(+33 files in other folders)
