[workspace]
resolver = "2"
members = [
    "crates/turbo-downloader",
    "crates/turbo-crawler",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1