[package]
name = "turbo-download"
version = "0.1.0"
description = "A fast download manager with web scraping capabilities"
authors = ["TurboDownload Team"]
edition = "2021"

[lib]
name = "turbo_download_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["stream", "json"] }

# HTML parsing
scraper = "0.19"

# URL handling
url = "2.5"

# Regex
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for task IDs
uuid = { version = "1.7", features = ["v4", "serde"] }

# Lazy static initialization
once_cell = "1.19"

# Async utilities
futures = "0.3"

# File system
dirs = "5.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"