[package]
name = "turbo-downloader"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["TurboDownload Team"]
description = "High-performance multi-threaded download engine"
repository = "https://github.com/turbodownload/turbo-downloader"
keywords = ["download", "http", "async", "multi-thread", "resume"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "turbo_downloader"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography (for ETag verification)
sha2 = "0.10"

# Async utilities
futures = "0.3"
bytes = "1.5"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Concurrency primitives
parking_lot = "0.12"

[dev-dependencies]
# Testing
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.8"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "download_bench"
harness = false

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]